--- a/style.css
+++ b/style.css
@@ -1,140 +1,140 @@
-:root {
-    --very-dark-blue: hsl(233, 47%, 7%);
-    --dark-desaturated-blue: hsl(244, 38%, 16%);
-    --soft-violet: hsl(277, 64%, 61%);
-    --white: hsl(0, 0%, 100%);
-    --slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
-    --slightly-transparent-white: hsla(0, 0%, 100%, 0.6);
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  img {
-    max-width: 100%;
-  }
-  
-  ul {
-    list-style-type: none;
-  }
-  
-  body {
-    font-family: "Inter", sans-serif;
-    background-color: var(--very-dark-blue);
-  }
-  p {
-    font-size: 15px;
-    line-height: 1.6;
-  }
-  .container{
-    background-color: var(--dark-desaturated-blue);
-    color: white;
-    margin: 50px 20px;
-    padding: 0 0 20px;
-    border-radius: 10px;
-    text-align: center;
-  }
-  .container .picture{
-    background: url(images/image-header-mobile.jpg)no-repeat center/cover;
-    height: 400px;
-    border-radius: 10px 10px 0 0; 
-  }
 
-  .container .picture .overlay{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+
+:root {
+  --very-dark-blue: hsl(233, 47%, 7%);
+  --dark-desaturated-blue: hsl(244, 38%, 16%);
+  --soft-violet: hsl(277, 64%, 61%);
+  --white: hsl(0, 0%, 100%);
+  --slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
+  --slightly-transparent-white: hsla(0, 0%, 100%, 0.6);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+}
+
+.card__span {
+  color: var(--soft-violet);
+}
+
+.lista__span {
+  display: block;
+  text-transform: lowercase;
+  margin-bottom: 3px;
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.lista {
+  list-style: none;
+}
+
+p {
+  font-size: 17px;
+  line-height: 1.6;
+}
+
+
+
+
+body {
+  background-color: var(--very-dark-blue);
+  font-family: "Inter", sans-serif;
+}
+
+.container {
+  background-color: var(--dark-desaturated-blue);
+  margin: 50px 20px;
+  border-radius: 10px;
+  padding: 0 0 20px;
+  text-align: center;
+
+}
+
+.conteiner-img {
+  height: 400px;
+  background: url(images/image-header-mobile.jpg) no-repeat center/cover;
+  border-radius: 10px 10px 0px 0px;
+  margin-bottom: 2.125rem;
+}
+
+.conteiner-img__overlay {
+  height: 400px;
+  background-color: hsla(277, 64%, 61%, 0.7);
+  border-radius: 10px 10px 0px 0px;
+}
+
+.card {
+  color: white;
+}
+
+.card__titulo {
+  margin: 30px 0 20px;
+  padding: 0 20px;
+  line-height: 1.3;
+}
+
+.card__subtitulo {
+  margin-bottom: 30px;
+  padding: 0 25px;
+}
+
+.lista li{
+  margin-bottom: 15px;
+}
+
+@media (min-width: 768px){
+  .container{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    text-align: left;
+  }
+  .conteiner-img {
+    background: url(images/image-header-desktop.jpg) no-repeat center/cover;
+    min-width: 50%;
+    height: 400px;
+    margin: 0;
+    border-radius:  0 10px 10px 0;
+  }
+  .conteiner-img__overlay {
     background-color: hsla(277, 64%, 61%, 0.7);
     height: 400px;
-    border-radius: 10px 10px 0 0;
+    border-radius: 0 10px 10px 0;
   }
-
-  .container .card h1{
-    margin: 30px 0 20px;
-    padding: 0 20px;
-    line-height: 1.3;
+  .card__titulo {
+    padding: 0 30px;
   }
-
-  .container .card h1 span{
-    color: var(--soft-violet);
+  .card__subtitulo{
+    font-size: 16px;
   }
-
-  .container .card p{
-    padding: 0 20px;
-    margin-bottom: 30px;
+  .lista {
+    padding: 20px;
+    display: flex;
+    
   }
-
-  .container .card ul li{
-    margin-bottom: 20px;
-    text-transform: uppercase;
+  .lista li {
+    margin-right: 30px;
+    font-size: 13px;
   }
-
-  .container .card ul li span{
-    display: block;
-    text-transform: lowercase;
-    font-weight: 700;
-    font-family: "Lexend Deca", sans-serif;
-  }
-
-  .attribution {
-    font-size: 11px;
-    text-align: center;
-    color: var(--white);
-    padding-bottom: 20px;
-  }
-  
-  .attribution a {
-    color: hsl(228, 45%, 44%);
-  }
-
-  @media (min-width: 768px){
-    .container{
-      display: flex;
-      flex-direction: row-reverse;
-      align-items: center;
-      justify-content: center;
-      padding: 0;
-      text-align: left;
-    }
-    .container .picture{
-      background: url(images/image-header-desktop.jpg) no-repeat center/cover;
-      min-width: 50%;
-      border-radius:  0 10px 10px 0;
-    }
-    .container .picture .overlay{
-      background-color: hsla(277, 64%, 61%, 0.7);
-      height: 400px;
-      border-radius: 0 10px 10px 0;
-    }
-    .container .card ul{
-      padding: 20px;
-      display: flex;
-    }
-    .container .card ul li {
-      margin-right: 30px;
-      font-size: 13px;
-    }
-    .container .card ul li span{
-      display: block;
-      text-transform: lowercase;
-      font-weight: 700;
-      font-family: "Lexend Deca", sans-serif;
-      font-size: 24px;
-      margin-bottom: 3px;
-    }
-  }
-  @media (min-width: 992px){
-    body{
+}
+@media (min-width: 992px){
+  body {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
-    }
-    .container .card:nth-child(2) {
-      padding: 0 30px;
-    }
-    .container .card p {
-      margin-bottom: 50px;
-    }
-  }
+      min-height: 100vh; 
+ }
+}
