--- a/style.css
+++ b/style.css
@@ -1,140 +1,109 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 
 :root {
-  --very-dark-blue: hsl(233, 47%, 7%);
-  --dark-desaturated-blue: hsl(244, 38%, 16%);
-  --soft-violet: hsl(277, 64%, 61%);
-  --white: hsl(0, 0%, 100%);
-  --slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
-  --slightly-transparent-white: hsla(0, 0%, 100%, 0.6);
+    --color-azul-claro: hsl(225, 100%, 94%);
+    --color-brilhante-azul-claro: hsl(245, 75%, 52%);
+    --color-azul-muito-claro: hsl(225, 100%, 98%);
+    --color-zul-dessaturado: hsl(224, 23%, 55%);
+    --color-zul-escuro: hsl(223, 47%, 23%);
+    --font-size-paragraph: 16px;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-img {
-  width: 100%;
-}
-
-.card__span {
-  color: var(--soft-violet);
-}
-
-.lista__span {
-  display: block;
-  text-transform: lowercase;
-  margin-bottom: 3px;
-  font-family: "Lexend Deca", sans-serif;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.lista {
-  list-style: none;
-}
-
-p {
-  font-size: 17px;
-  line-height: 1.6;
-}
-
-
-
-
-body {
-  background-color: var(--very-dark-blue);
-  font-family: "Inter", sans-serif;
-}
-
-.container {
-  background-color: var(--dark-desaturated-blue);
-  margin: 50px 20px;
-  border-radius: 10px;
-  padding: 0 0 20px;
-  text-align: center;
-
-}
-
-.conteiner-img {
-  height: 400px;
-  background: url(images/image-header-mobile.jpg) no-repeat center/cover;
-  border-radius: 10px 10px 0px 0px;
-  margin-bottom: 2.125rem;
-}
-
-.conteiner-img__overlay {
-  height: 400px;
-  background-color: hsla(277, 64%, 61%, 0.7);
-  border-radius: 10px 10px 0px 0px;
-}
-
-.card {
-  color: white;
-}
-
-.card__titulo {
-  margin: 30px 0 20px;
-  padding: 0 20px;
-  line-height: 1.3;
-}
-
-.card__subtitulo {
-  margin-bottom: 30px;
-  padding: 0 25px;
-}
-
-.lista li{
-  margin-bottom: 15px;
-}
-
-@media (min-width: 768px){
-  .container{
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    text-align: left;
-  }
-  .conteiner-img {
-    background: url(images/image-header-desktop.jpg) no-repeat center/cover;
-    min-width: 50%;
-    height: 400px;
+body{
+    font-family: "Red Hat Display";
     margin: 0;
-    border-radius:  0 10px 10px 0;
-  }
-  .conteiner-img__overlay {
-    background-color: hsla(277, 64%, 61%, 0.7);
-    height: 400px;
-    border-radius: 0 10px 10px 0;
-  }
-  .card__titulo {
-    padding: 0 30px;
-  }
-  .card__subtitulo{
-    font-size: 16px;
-  }
-  .lista {
-    padding: 20px;
-    display: flex;
-    
-  }
-  .lista li {
-    margin-right: 30px;
-    font-size: 13px;
-  }
+    padding: 0;
+    box-sizing: border-box;
+    background-color: var(--color-azul-claro);
 }
-@media (min-width: 992px){
-  body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh; 
- }
+.main{
+    display: grid;
+    text-align: center;
+    
+}
+.card{
+    max-width: 18.75rem;
+    margin: 1.875rem;
+    background-color: white;
+    border-radius: 15px;
+    margin: 6.25rem auto;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+.card__img--top img{
+    width: 100%;
+    height: auto;
+    border: none;
+    border-radius: 15px 15px 0px 0px;
+}
+.card__text{
+    padding: 8px;
+}
+.card__titulo{
+    font-weight: 900;
+    color: var(--color-zul-escuro);
+    font-size: 1.7em;
+}
+.card__paragrafo{
+    color: var(--color-zul-dessaturado);
+    padding: 6px;
+    line-height: 23px;
+}
+.card-planos{
+    display: grid;
+    justify-content: center;
+    gap: 30px;
+}
+.planos{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background: var(--color-azul-muito-claro);
+    padding: 15px;
+    border: none;
+    border-radius: 15px;
+}
+.annual{
+    padding: 0px 20px 0px 10px;
+    font-weight: 900;
+    line-height: 1.6em;
+}
+.annual span {
+    color: var(--color-zul-dessaturado);
+    font-weight: 500;
+}
+.card__pagamento{
+    width: 250px;
+    margin-left: 15px;
+    margin-top: 15px;
+    margin-bottom: 17px;
+    background-color: var(--color-brilhante-azul-claro);
+    color: var(--color-azul-muito-claro);
+    padding: 10px;
+    border-radius: 10px;
+    font-weight: 700;
+    box-shadow: 4px 22px hsl(225, 100%, 96%);
+    cursor: pointer;
+}
+.card__pagamento:hover{
+    background: rgb(9, 71, 255);
+    color: #fff;
+}
+.card__cancel {
+    margin-bottom: 20px;
+}
+.cancel{
+    color: var(--color-zul-dessaturado);
+    font-weight: 700;
+    cursor: pointer;
+}
+.cancel:hover{
+    color: royalblue;
+}
+@media screen and (min-width: 400px) {
+    body{
+        background: url(./images/pattern-background-desktop.svg);
+        background-repeat: no-repeat;
+        background-color: var(--color-azul-claro);
+    }
+   
 }
